--- a/I18N.md
+++ b/I18N.md
@@ -1,6 +1,6 @@
 # Internationalization
 
-* Internationalzation = i18n
+* Internationalization = i18n
 * Localization = l10n
 * Globalization = i18n + l10n = g11n
 
